deployments/service/base/apisrv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisrv
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
